--- a/css/styles.css
+++ b/css/styles.css
@@ -299,8 +299,7 @@ img {
 
 .team-item {
   margin-right: 30px;
-  background-color: var(--main-background-color);
-
+  background-color: var(--main-bg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -312,6 +311,11 @@ img {
 
 .team-img {
   margin-bottom: 30px;
+}
+
+.team-items {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .team-member {
